# personal-site

./: .gitignore  Dockerfile  Makefile  README.md  app.ml  app.opam  bun.lockb  deploy.sh  dune  dune-project  esy.json  fly.toml  home.eml.ml  home.html  package-lock.json  package.json  pnpm-lock.yaml  template.eml.html
.github/workflows/: stelle.yml
_build/: .db  .digest-db  log
_build/default/: .dockerignore  app.ml  bun.lockb  docker-compose.yml  esy.json  template.eml.html  template.ml
_build/default/.app.eobjs/: dune__exe.ml-gen  dune__exe__App.impl.all-deps  dune__exe__App.impl.d  dune__exe__Template.impl.d
_build/default/.app.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  dune__exe__App.cmi  dune__exe__App.cmo  dune__exe__App.cmt  dune__exe__Template.cmi  dune__exe__Template.cmo  dune__exe__Template.cmt
_build/default/.app.eobjs/native/: dune__exe.cmx  dune__exe__App.cmx  dune__exe__Template.cmx
_build/default/.dune/: configurator  configurator.v2
_build/default/.merlin-conf/: exe-app
data/blog/: dancing-on-the-edge-life-and-death.md  reborn.md
engine/: README.md  seele.ml
esy.lock/: index.json
layouts/: default.eml.ml  default.ml
pages/: home.ml
static/: style.css
templates/: default.ml
