(executable
 (name app)
 (libraries dream tyxml)
 (preprocess
  (pps lwt_ppx)))

(include_subdirs unqualified)

(subdir
 layouts/
 (rule
  (target default.ml)
  (action
   (run %{bin:dream_eml} %{dep:default.eml.ml} --workspace %{workspace_root}))))

; (subdir
;  pages/
;  (rule
;   (target home.ml)
;   (action
;    (run %{bin:dream_eml} %{dep:home.ml} --workspace %{workspace_root})))
;  (rule
;   (target academic_users.ml)
;   (action
;    (run
;     %{bin:dream_eml}
;     %{dep:academic_users.eml}
;     --workspace
;     %{workspace_root})))
; )
